--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ MarkupSafe==2.0.1
 mysqlclient==2.1.0
 packaging==23.1
 pathspec==0.11.1
-Pillow
+Pillow==8.3.1
 pycparser==2.20
 python-dateutil==2.8.2
 python-dotenv==0.21.1
